--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "knex": "^0.95.4",
     "mongoose": "^5.12.0",
     "multer": "^1.4.2",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "redis": "^3.1.0"
   }
 }
