--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "cloudinary": "^1.25.1",
     "cors": "^2.8.5",
     "framer-motion": "^4.0.0",
+    "knex": "^0.95.4",
     "mongoose": "^5.12.2",
     "multer": "^1.4.2",
+    "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "redis": "^3.1.0",
     "typescript": "^4.2.3",
     "web-vitals": "^1.0.1"
   },
